# deep-trader

./: .gitignore  pyproject.toml
.github/instructions/: instructions.instructions.md
src/deep_trader/: main.py
src/deep_trader/agents/: market_analysis_agent.py  market_analysis_agent_config.yaml  position_manager_agent.py  position_manager_agent_config.yaml  research_agent.py  research_agent_config.yaml  trader_agent.py  trader_agent_config.yaml
src/deep_trader/tools/: search_tool.py
src/deep_trader/utils/: agent_config_loader.py  agent_runner.py  config.py  langsmith.py  mcp.py  yaml_loader.py
