[project]
name = "deep-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Brian Cusack", email = "briancusack78@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.2.4",
    "langchain-google-vertexai>=3.0.1",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "tavily-python>=0.7.12",
]

[project.scripts]
deep-trader = "deep_trader.main:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
